src/parser.js
Ingreedy = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = [],
        peg$c1 = peg$FAILED,
        peg$c2 = null,
        peg$c3 = /^[\n]/,
        peg$c4 = { type: "class", value: "[\\n]", description: "[\\n]" },
        peg$c5 = function(amount, container, unit, ingredient) {
            var result = {
              amount: amount,
              container: container,
              ingredient: ingredient,
              unit: unit
            };

            for(var i in result) {
              if(result[i] === null || result[i] === undefined) {
                delete result[i];
              }
            }

            return result;
          },
        peg$c6 = "(",
        peg$c7 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c8 = ")",
        peg$c9 = { type: "literal", value: ")", description: "\")\"" },
        peg$c10 = function(amount, unit) {
            return { amount: amount, unit: unit };
          },
        peg$c11 = " ",
        peg$c12 = { type: "literal", value: " ", description: "\" \"" },
        peg$c13 = /^[\t]/,
        peg$c14 = { type: "class", value: "[\\t]", description: "[\\t]" },
        peg$c15 = function(letters) { return letters.join(''); },
        peg$c16 = /^[.]/,
        peg$c17 = { type: "class", value: "[.]", description: "[.]" },
        peg$c18 = /^[\/]/,
        peg$c19 = { type: "class", value: "[\\/]", description: "[\\/]" },
        peg$c20 = /^[0-9]/,
        peg$c21 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c22 = function(digits) { return digits.join(''); },
        peg$c23 = /^[a-zA-Z]/,
        peg$c24 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c25 = void 0,
        peg$c26 = "cups",
        peg$c27 = { type: "literal", value: "cups", description: "\"cups\"" },
        peg$c28 = "cup",
        peg$c29 = { type: "literal", value: "cup", description: "\"cup\"" },
        peg$c30 = "c.",
        peg$c31 = { type: "literal", value: "c.", description: "\"c.\"" },
        peg$c32 = "c",
        peg$c33 = { type: "literal", value: "c", description: "\"c\"" },
        peg$c34 = "fluid",
        peg$c35 = { type: "literal", value: "fluid", description: "\"fluid\"" },
        peg$c36 = "fl",
        peg$c37 = { type: "literal", value: "fl", description: "\"fl\"" },
        peg$c38 = ".",
        peg$c39 = { type: "literal", value: ".", description: "\".\"" },
        peg$c40 = "gallons",
        peg$c41 = { type: "literal", value: "gallons", description: "\"gallons\"" },
        peg$c42 = "gallon",
        peg$c43 = { type: "literal", value: "gallon", description: "\"gallon\"" },
        peg$c44 = "gal.",
        peg$c45 = { type: "literal", value: "gal.", description: "\"gal.\"" },
        peg$c46 = "gal",
        peg$c47 = { type: "literal", value: "gal", description: "\"gal\"" },
        peg$c48 = "ounces",
        peg$c49 = { type: "literal", value: "ounces", description: "\"ounces\"" },
        peg$c50 = "ounce",
        peg$c51 = { type: "literal", value: "ounce", description: "\"ounce\"" },
        peg$c52 = "oz.",
        peg$c53 = { type: "literal", value: "oz.", description: "\"oz.\"" },
        peg$c54 = "oz",
        peg$c55 = { type: "literal", value: "oz", description: "\"oz\"" },
        peg$c56 = "pints",
        peg$c57 = { type: "literal", value: "pints", description: "\"pints\"" },
        peg$c58 = "pint",
        peg$c59 = { type: "literal", value: "pint", description: "\"pint\"" },
        peg$c60 = "pt.",
        peg$c61 = { type: "literal", value: "pt.", description: "\"pt.\"" },
        peg$c62 = "pt",
        peg$c63 = { type: "literal", value: "pt", description: "\"pt\"" },
        peg$c64 = "pounds",
        peg$c65 = { type: "literal", value: "pounds", description: "\"pounds\"" },
        peg$c66 = "pound",
        peg$c67 = { type: "literal", value: "pound", description: "\"pound\"" },
        peg$c68 = "lbs.",
        peg$c69 = { type: "literal", value: "lbs.", description: "\"lbs.\"" },
        peg$c70 = "lbs",
        peg$c71 = { type: "literal", value: "lbs", description: "\"lbs\"" },
        peg$c72 = "lb.",
        peg$c73 = { type: "literal", value: "lb.", description: "\"lb.\"" },
        peg$c74 = "lb",
        peg$c75 = { type: "literal", value: "lb", description: "\"lb\"" },
        peg$c76 = "quarts",
        peg$c77 = { type: "literal", value: "quarts", description: "\"quarts\"" },
        peg$c78 = "quart",
        peg$c79 = { type: "literal", value: "quart", description: "\"quart\"" },
        peg$c80 = "qts.",
        peg$c81 = { type: "literal", value: "qts.", description: "\"qts.\"" },
        peg$c82 = "qts",
        peg$c83 = { type: "literal", value: "qts", description: "\"qts\"" },
        peg$c84 = "qt.",
        peg$c85 = { type: "literal", value: "qt.", description: "\"qt.\"" },
        peg$c86 = "qt",
        peg$c87 = { type: "literal", value: "qt", description: "\"qt\"" },
        peg$c88 = "tablespoons",
        peg$c89 = { type: "literal", value: "tablespoons", description: "\"tablespoons\"" },
        peg$c90 = "tablespoon",
        peg$c91 = { type: "literal", value: "tablespoon", description: "\"tablespoon\"" },
        peg$c92 = "tbsp.",
        peg$c93 = { type: "literal", value: "tbsp.", description: "\"tbsp.\"" },
        peg$c94 = "tbsp",
        peg$c95 = { type: "literal", value: "tbsp", description: "\"tbsp\"" },
        peg$c96 = "tbs.",
        peg$c97 = { type: "literal", value: "tbs.", description: "\"tbs.\"" },
        peg$c98 = "tbs",
        peg$c99 = { type: "literal", value: "tbs", description: "\"tbs\"" },
        peg$c100 = "T.",
        peg$c101 = { type: "literal", value: "T.", description: "\"T.\"" },
        peg$c102 = "T",
        peg$c103 = { type: "literal", value: "T", description: "\"T\"" },
        peg$c104 = "teaspoons",
        peg$c105 = { type: "literal", value: "teaspoons", description: "\"teaspoons\"" },
        peg$c106 = "teaspoon",
        peg$c107 = { type: "literal", value: "teaspoon", description: "\"teaspoon\"" },
        peg$c108 = "tsp.",
        peg$c109 = { type: "literal", value: "tsp.", description: "\"tsp.\"" },
        peg$c110 = "tsp",
        peg$c111 = { type: "literal", value: "tsp", description: "\"tsp\"" },
        peg$c112 = "t.",
        peg$c113 = { type: "literal", value: "t.", description: "\"t.\"" },
        peg$c114 = "t",
        peg$c115 = { type: "literal", value: "t", description: "\"t\"" },
        peg$c116 = "grams",
        peg$c117 = { type: "literal", value: "grams", description: "\"grams\"" },
        peg$c118 = "gram",
        peg$c119 = { type: "literal", value: "gram", description: "\"gram\"" },
        peg$c120 = "gr.",
        peg$c121 = { type: "literal", value: "gr.", description: "\"gr.\"" },
        peg$c122 = "gr",
        peg$c123 = { type: "literal", value: "gr", description: "\"gr\"" },
        peg$c124 = "g.",
        peg$c125 = { type: "literal", value: "g.", description: "\"g.\"" },
        peg$c126 = "g",
        peg$c127 = { type: "literal", value: "g", description: "\"g\"" },
        peg$c128 = "kilograms",
        peg$c129 = { type: "literal", value: "kilograms", description: "\"kilograms\"" },
        peg$c130 = "kilogram",
        peg$c131 = { type: "literal", value: "kilogram", description: "\"kilogram\"" },
        peg$c132 = "kg.",
        peg$c133 = { type: "literal", value: "kg.", description: "\"kg.\"" },
        peg$c134 = "kg",
        peg$c135 = { type: "literal", value: "kg", description: "\"kg\"" },
        peg$c136 = "liters",
        peg$c137 = { type: "literal", value: "liters", description: "\"liters\"" },
        peg$c138 = "liter",
        peg$c139 = { type: "literal", value: "liter", description: "\"liter\"" },
        peg$c140 = "l.",
        peg$c141 = { type: "literal", value: "l.", description: "\"l.\"" },
        peg$c142 = "l",
        peg$c143 = { type: "literal", value: "l", description: "\"l\"" },
        peg$c144 = "milligrams",
        peg$c145 = { type: "literal", value: "milligrams", description: "\"milligrams\"" },
        peg$c146 = "milligram",
        peg$c147 = { type: "literal", value: "milligram", description: "\"milligram\"" },
        peg$c148 = "mg.",
        peg$c149 = { type: "literal", value: "mg.", description: "\"mg.\"" },
        peg$c150 = "mg",
        peg$c151 = { type: "literal", value: "mg", description: "\"mg\"" },
        peg$c152 = "milliliters",
        peg$c153 = { type: "literal", value: "milliliters", description: "\"milliliters\"" },
        peg$c154 = "milliliter",
        peg$c155 = { type: "literal", value: "milliliter", description: "\"milliliter\"" },
        peg$c156 = "ml.",
        peg$c157 = { type: "literal", value: "ml.", description: "\"ml.\"" },
        peg$c158 = "ml",
        peg$c159 = { type: "literal", value: "ml", description: "\"ml\"" },
        peg$c160 = "dashes",
        peg$c161 = { type: "literal", value: "dashes", description: "\"dashes\"" },
        peg$c162 = "dash",
        peg$c163 = { type: "literal", value: "dash", description: "\"dash\"" },
        peg$c164 = "handfuls",
        peg$c165 = { type: "literal", value: "handfuls", description: "\"handfuls\"" },
        peg$c166 = "handful",
        peg$c167 = { type: "literal", value: "handful", description: "\"handful\"" },
        peg$c168 = "pinches",
        peg$c169 = { type: "literal", value: "pinches", description: "\"pinches\"" },
        peg$c170 = "pinch",
        peg$c171 = { type: "literal", value: "pinch", description: "\"pinch\"" },
        peg$c172 = "touches",
        peg$c173 = { type: "literal", value: "touches", description: "\"touches\"" },
        peg$c174 = "touch",
        peg$c175 = { type: "literal", value: "touch", description: "\"touch\"" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parseingredient_addition();

      return s0;
    }

    function peg$parseingredient_additions() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseingredient_addition();
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          s1 = peg$parseingredient_addition();
        }
      } else {
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseingredient_addition() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseamount();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsews();
          }
        } else {
          s2 = peg$c1;
        }
        if (s2 === peg$FAILED) {
          s2 = peg$c2;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsecontainer();
          if (s3 === peg$FAILED) {
            s3 = peg$c2;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseunit();
            if (s4 === peg$FAILED) {
              s4 = peg$c2;
            }
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$parsews();
              if (s6 !== peg$FAILED) {
                while (s6 !== peg$FAILED) {
                  s5.push(s6);
                  s6 = peg$parsews();
                }
              } else {
                s5 = peg$c1;
              }
              if (s5 === peg$FAILED) {
                s5 = peg$c2;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parsephrase();
                if (s6 === peg$FAILED) {
                  s6 = peg$c2;
                }
                if (s6 !== peg$FAILED) {
                  if (peg$c3.test(input.charAt(peg$currPos))) {
                    s7 = input.charAt(peg$currPos);
                    peg$currPos++;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c4); }
                  }
                  if (s7 === peg$FAILED) {
                    s7 = peg$c2;
                  }
                  if (s7 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c5(s1, s3, s4, s6);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c1;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseamount() {
      var s0;

      s0 = peg$parsefloat();
      if (s0 === peg$FAILED) {
        s0 = peg$parsemixed_number();
        if (s0 === peg$FAILED) {
          s0 = peg$parsefraction();
          if (s0 === peg$FAILED) {
            s0 = peg$parseinteger();
          }
        }
      }

      return s0;
    }

    function peg$parsecontainer() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 40) {
        s1 = peg$c6;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s1 === peg$FAILED) {
        s1 = peg$c2;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseamount();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parsews();
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parsews();
            }
          } else {
            s3 = peg$c1;
          }
          if (s3 === peg$FAILED) {
            s3 = peg$c2;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseunit();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 41) {
                s5 = peg$c8;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c9); }
              }
              if (s5 === peg$FAILED) {
                s5 = peg$c2;
              }
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c10(s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsews() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 32) {
        s0 = peg$c11;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }
      if (s0 === peg$FAILED) {
        if (peg$c13.test(input.charAt(peg$currPos))) {
          s0 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
      }

      return s0;
    }

    function peg$parsespace() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 32) {
        s0 = peg$c11;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }

      return s0;
    }

    function peg$parsephrase() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseword();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parsespace();
        if (s5 !== peg$FAILED) {
          s6 = peg$parseword();
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$c1;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$c1;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = peg$parsespace();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseword();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$c1;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$c1;
          }
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$c1;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        s1 = input.substring(s0, peg$currPos);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseword() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseletter();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseletter();
        }
      } else {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c15(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsefloat() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseinteger();
      if (s2 === peg$FAILED) {
        s2 = peg$c2;
      }
      if (s2 !== peg$FAILED) {
        if (peg$c16.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c17); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseinteger();
          if (s4 !== peg$FAILED) {
            s2 = [s2, s3, s4];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$c1;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c1;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        s1 = input.substring(s0, peg$currPos);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsemixed_number() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseinteger();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsespace();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsefraction();
          if (s4 !== peg$FAILED) {
            s2 = [s2, s3, s4];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$c1;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c1;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        s1 = input.substring(s0, peg$currPos);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsefraction() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseinteger();
      if (s2 !== peg$FAILED) {
        if (peg$c18.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c19); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseinteger();
          if (s4 !== peg$FAILED) {
            s2 = [s2, s3, s4];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$c1;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c1;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        s1 = input.substring(s0, peg$currPos);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseinteger() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c20.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c20.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c21); }
          }
        }
      } else {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c22(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseletter() {
      var s0;

      if (peg$c23.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c24); }
      }

      return s0;
    }

    function peg$parseunit() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseenglish_unit();
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        peg$silentFails++;
        s4 = peg$parseletter();
        peg$silentFails--;
        if (s4 === peg$FAILED) {
          s3 = peg$c25;
        } else {
          peg$currPos = s3;
          s3 = peg$c1;
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$c1;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        s1 = input.substring(s0, peg$currPos);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$currPos;
        s2 = peg$parsemetric_unit();
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          peg$silentFails++;
          s4 = peg$parseletter();
          peg$silentFails--;
          if (s4 === peg$FAILED) {
            s3 = peg$c25;
          } else {
            peg$currPos = s3;
            s3 = peg$c1;
          }
          if (s3 !== peg$FAILED) {
            s2 = [s2, s3];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$c1;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c1;
        }
        if (s1 !== peg$FAILED) {
          s1 = input.substring(s0, peg$currPos);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$currPos;
          s2 = peg$parseimprecise_unit();
          if (s2 !== peg$FAILED) {
            s3 = peg$currPos;
            peg$silentFails++;
            s4 = peg$parseletter();
            peg$silentFails--;
            if (s4 === peg$FAILED) {
              s3 = peg$c25;
            } else {
              peg$currPos = s3;
              s3 = peg$c1;
            }
            if (s3 !== peg$FAILED) {
              s2 = [s2, s3];
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$c1;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c1;
          }
          if (s1 !== peg$FAILED) {
            s1 = input.substring(s0, peg$currPos);
          }
          s0 = s1;
        }
      }

      return s0;
    }

    function peg$parseenglish_unit() {
      var s0;

      s0 = peg$parsecup();
      if (s0 === peg$FAILED) {
        s0 = peg$parsefluid_ounce();
        if (s0 === peg$FAILED) {
          s0 = peg$parsegallon();
          if (s0 === peg$FAILED) {
            s0 = peg$parseounce();
            if (s0 === peg$FAILED) {
              s0 = peg$parsepint();
              if (s0 === peg$FAILED) {
                s0 = peg$parsepound();
                if (s0 === peg$FAILED) {
                  s0 = peg$parsequart();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parsetablespoon();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseteaspoon();
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsecup() {
      var s0;
